# enterprise-data-report

./: .gitignore  .justfile  README.md  TODO.md  app_config.py  app_config.yaml  app_determine.py  app_main.py  app_web.py  config.json  flake.nix  pyproject.toml  scripts.sh
lib/: cleaning.py  config.py  files.py  insights.py  settings.py  stage.py
lib/cleaning/: dataframes.py
lib/smarts/: column_determination.py
src/py/: pyproject.toml  pyrightconfig.json
src/py/lib/: data.py  settings.py  stage.py
src/py/ui/lib/: page_utils.py
src/py/ui/pages/: explorer.py  home.py
ui/pages/: explorer.py  home.py
