[project]
name = "py"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
  "fastexcel>=0.15.1",
  "numpy>=2.3.3",
  "openpyxl>=3.1.5",
  "polars>=1.33.1",
  "pygwalker>=0.4.9.15",
  "streamlit>=1.49.1",
  "xlsxwriter>=3.2.5",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1", "jupyter>=1.1.1", "rich>=14.1.0"]
